--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "eslint-plugin-bdd": "1.1.0",
     "eslint-plugin-filenames": "0.1.2",
     "eslint-plugin-react": "3.6.3"
+  },
+  "peerDependencies": {
+    "eslint-plugin-angular": "0.13.0",
+    "eslint-plugin-bdd": "1.1.0",
+    "eslint-plugin-filenames": "0.1.2",
+    "eslint-plugin-react": "3.6.3"
   }
 }
