--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   ],
   "license": "UNLICENSED",
   "dependencies": {
+    "eslint-import-resolver-webpack": "0.8.1",
     "eslint-plugin-angular": "1.0.1",
     "eslint-plugin-bdd": "2.1.0",
-    "eslint-plugin-modules": "1.1.1",
+    "eslint-plugin-import": "2.2.0",
     "eslint-plugin-react": "6.9.0"
   }
 }
