--- a/package.json
+++ b/package.json
@@ -1,28 +1,43 @@
 {
   "name": "eslint-config-jetbrains",
-  "version": "1.0.0",
+  "version": "3.0.0-alpha.1",
   "description": "JetBrains config for ESLint",
-  "main": "index.js",
+  "author": "JetBrains",
+  "license": "Apache-2.0",
+  "main": "base.js",
   "files": [
-    "*.js"
+    "*.js",
+    "README.md"
   ],
   "repository": {
     "type": "git",
-    "url": "<internal-git-host>/jetbrains-config-eslint.git"
-  },
-  "publishConfig": {
-    "registry": "<internal-npm-publish-repo>"
+    "url": "git+https://github.com/JetBrains/eslint-config.git"
   },
   "keywords": [
     "eslint",
-    "eslintconfig"
+    "eslintconfig",
+    "jetbrains"
   ],
-  "license": "UNLICENSED",
   "dependencies": {
     "eslint-import-resolver-webpack": "0.8.1",
     "eslint-plugin-angular": "1.0.1",
     "eslint-plugin-bdd": "2.1.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-react": "7.0.1"
+  },
+  "devDependencies": {
+    "ci-publish": "^1.3.0",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.0.0",
+    "standard-version": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "scripts": {
+    "commit": "git-cz",
+    "release:ci": "standard-version && git push --follow-tags origin master && ci-publish"
   }
 }
