--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "jetbrains"
   ],
   "dependencies": {
-    "eslint-import-resolver-webpack": "0.8.1",
-    "eslint-plugin-angular": "1.0.1",
-    "eslint-plugin-bdd": "2.1.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-react": "7.0.1"
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-angular": "^3.0.0",
+    "eslint-plugin-bdd": "^2.1.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.1.0"
   },
   "devDependencies": {
     "ci-publish": "^1.3.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
     "standard-version": "^4.0.0"
+  },
+  "peerDependencies": {
+    "eslint": ">=4.2.0"
   },
   "config": {
     "commitizen": {
