--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "ci-publish": "^1.3.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^4.15.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
     "standard-version": "^4.0.0"
   },
   "peerDependencies": {
@@ -40,7 +43,12 @@
     }
   },
   "scripts": {
+    "precommit": "lint-staged",
     "commit": "git-cz",
-    "release:ci": "standard-version && git push --follow-tags origin master && ci-publish"
+    "lint": "eslint .",
+    "release:ci": "npm run lint && standard-version && git push --follow-tags origin master && ci-publish"
+  },
+  "lint-staged": {
+    "*.js": ["eslint --fix", "git add"]
   }
 }
