--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "jetbrains"
   ],
   "dependencies": {
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-plugin-angular": "^3.0.0",
-    "eslint-plugin-bdd": "^2.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-import-resolver-webpack": "^0.8.4",
+    "eslint-plugin-angular": "3.1.1",
+    "eslint-plugin-bdd": "2.1.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-react": "7.5.1"
   },
   "devDependencies": {
     "ci-publish": "^1.3.0",
     "commitizen": "^2.9.6",
-    "cz-conventional-changelog": "^2.0.0",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.15.0",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
-    "standard-version": "^4.0.0"
+    "standard-version": "^4.3.0"
   },
   "peerDependencies": {
-    "eslint": ">=4.2.0"
+    "eslint": ">=4.10.0"
   },
   "config": {
     "commitizen": {
@@ -49,6 +49,9 @@
     "release:ci": "npm run lint && standard-version && git push --follow-tags origin master && ci-publish"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
