--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jetbrains/eslint-config",
-  "version": "4.0.0-0",
+  "version": "4.0.0",
   "description": "JetBrains config for ESLint",
   "author": "JetBrains",
   "license": "Apache-2.0",
