--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "jetbrains"
   ],
   "dependencies": {
-    "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-plugin-angular": "3.1.1",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-angular": "3.3.0",
     "eslint-plugin-bdd": "2.1.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-react": "7.5.1"
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "7.10.0"
   },
   "devDependencies": {
-    "ci-publish": "^1.3.0",
-    "commitizen": "^2.9.6",
+    "ci-publish": "^1.3.1",
+    "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^4.15.0",
+    "eslint": "^5.0.1",
     "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
-    "standard-version": "^4.3.0"
+    "lint-staged": "^7.2.0",
+    "standard-version": "^4.4.0"
   },
   "peerDependencies": {
     "eslint": ">=4.10.0"
