--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "eslint-plugin-react": "7.10.0"
   },
   "devDependencies": {
-    "ci-publish": "^1.3.1",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.0.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
-    "standard-version": "^4.4.0"
+    "release-it": "10.1.0",
+    "standard-version": "^5.0.0"
   },
   "peerDependencies": {
     "eslint": ">=4.10.0"
@@ -46,7 +46,7 @@
     "precommit": "lint-staged",
     "commit": "git-cz",
     "lint": "eslint .",
-    "release:ci": "npm run lint && standard-version && git push --follow-tags origin master && ci-publish"
+    "release:ci": "npm run lint && standard-version && git push --follow-tags origin master && npm publish"
   },
   "lint-staged": {
     "*.js": [
