--- a/package.json
+++ b/package.json
@@ -18,23 +18,22 @@
     "eslintconfig",
     "jetbrains"
   ],
-  "dependencies": {
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-angular": "3.3.0",
-    "eslint-plugin-bdd": "2.1.1",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-react": "7.10.0"
-  },
   "devDependencies": {
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.13.0",
     "husky": "^2.4.0",
     "lint-staged": "^8.2.0",
     "standard-version": "^6.0.1"
   },
   "peerDependencies": {
-    "eslint": ">=6.0.0"
+    "eslint": ">=6.0.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-angular": "^3.3.0",
+    "eslint-plugin-bdd": "^2.1.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-react": "^7.14.3"
   },
   "config": {
     "commitizen": {
