--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jetbrains/eslint-config",
-  "version": "5.0.0",
+  "version": "5.1.0",
   "description": "JetBrains config for ESLint",
   "author": "JetBrains",
   "license": "Apache-2.0",
@@ -36,11 +36,21 @@
     "eslint-plugin-react": "^7.14.3"
   },
   "peerDependenciesMeta": {
-    "eslint-import-resolver-webpack": {"optional": true},
-    "eslint-plugin-angular": {"optional": true},
-    "eslint-plugin-bdd": {"optional": true},
-    "eslint-plugin-import": {"optional": true},
-    "eslint-plugin-react": {"optional": true}
+    "eslint-import-resolver-webpack": {
+      "optional": true
+    },
+    "eslint-plugin-angular": {
+      "optional": true
+    },
+    "eslint-plugin-bdd": {
+      "optional": true
+    },
+    "eslint-plugin-import": {
+      "optional": true
+    },
+    "eslint-plugin-react": {
+      "optional": true
+    }
   },
   "config": {
     "commitizen": {
