--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jetbrains/eslint-config",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "description": "JetBrains config for ESLint",
   "author": "JetBrains",
   "license": "Apache-2.0",
@@ -49,7 +49,9 @@
     "eslint-plugin-import": {
       "optional": true
     },
-    "eslint-plugin-jsx-a11y": {"optional": true},
+    "eslint-plugin-jsx-a11y": {
+      "optional": true
+    },
     "eslint-plugin-react": {
       "optional": true
     }
